// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Button Snapshots should match snapshot for icon-only button 1`] = `
<button
  aria-disabled="false"
  aria-label="Close"
  class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary-600 text-white hover:bg-primary-700 active:bg-primary-800 focus-visible:ring-primary-500 p-2 rounded-md "
  style="cursor: pointer;"
  type="button"
>
  <span>
    ×
  </span>
</button>
`;

exports[`Button Snapshots should match snapshot when disabled 1`] = `
<button
  aria-disabled="true"
  class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary-600 text-white hover:bg-primary-700 active:bg-primary-800 focus-visible:ring-primary-500 px-4 py-2 text-base rounded-md gap-2 "
  disabled=""
  style="cursor: pointer;"
  type="button"
>
  Disabled
</button>
`;

exports[`Button Snapshots should match snapshot when loading 1`] = `
<button
  aria-disabled="true"
  class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary-600 text-white hover:bg-primary-700 active:bg-primary-800 focus-visible:ring-primary-500 px-4 py-2 text-base rounded-md gap-2 "
  disabled=""
  style="cursor: pointer;"
  type="button"
>
  <svg
    aria-hidden="true"
    class="animate-spin h-4 w-4"
    fill="none"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      class="opacity-25"
      cx="12"
      cy="12"
      r="10"
      stroke="currentColor"
      stroke-width="4"
    />
    <path
      class="opacity-75"
      d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
      fill="currentColor"
    />
  </svg>
  Loading
</button>
`;

exports[`Button Snapshots should match snapshot with all sizes 1`] = `
<div>
  <div>
    <button
      aria-disabled="false"
      class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary-600 text-white hover:bg-primary-700 active:bg-primary-800 focus-visible:ring-primary-500 px-3 py-1.5 text-sm rounded-md gap-1.5 "
      style="cursor: pointer;"
      type="button"
    >
      Small
    </button>
    <button
      aria-disabled="false"
      class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary-600 text-white hover:bg-primary-700 active:bg-primary-800 focus-visible:ring-primary-500 px-4 py-2 text-base rounded-md gap-2 "
      style="cursor: pointer;"
      type="button"
    >
      Medium
    </button>
    <button
      aria-disabled="false"
      class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary-600 text-white hover:bg-primary-700 active:bg-primary-800 focus-visible:ring-primary-500 px-6 py-3 text-lg rounded-lg gap-2.5 "
      style="cursor: pointer;"
      type="button"
    >
      Large
    </button>
  </div>
</div>
`;

exports[`Button Snapshots should match snapshot with all variants 1`] = `
<div>
  <div>
    <button
      aria-disabled="false"
      class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary-600 text-white hover:bg-primary-700 active:bg-primary-800 focus-visible:ring-primary-500 px-4 py-2 text-base rounded-md gap-2 "
      style="cursor: pointer;"
      type="button"
    >
      Primary
    </button>
    <button
      aria-disabled="false"
      class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-secondary-500 text-white hover:bg-secondary-600 active:bg-secondary-700 focus-visible:ring-secondary-500 px-4 py-2 text-base rounded-md gap-2 "
      style="cursor: pointer;"
      type="button"
    >
      Secondary
    </button>
    <button
      aria-disabled="false"
      class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-transparent text-neutral-700 hover:bg-neutral-100 active:bg-neutral-200 focus-visible:ring-neutral-500 px-4 py-2 text-base rounded-md gap-2 "
      style="cursor: pointer;"
      type="button"
    >
      Ghost
    </button>
    <button
      aria-disabled="false"
      class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-destructive-600 text-white hover:bg-destructive-700 active:bg-destructive-800 focus-visible:ring-destructive-500 px-4 py-2 text-base rounded-md gap-2 "
      style="cursor: pointer;"
      type="button"
    >
      Destructive
    </button>
  </div>
</div>
`;

exports[`Button Snapshots should match snapshot with custom className 1`] = `
<button
  aria-disabled="false"
  class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary-600 text-white hover:bg-primary-700 active:bg-primary-800 focus-visible:ring-primary-500 px-4 py-2 text-base rounded-md gap-2 custom-class"
  style="cursor: pointer;"
  type="button"
>
  Custom
</button>
`;

exports[`Button Snapshots should match snapshot with default props 1`] = `
<button
  aria-disabled="false"
  class="inline-flex items-center justify-center font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary-600 text-white hover:bg-primary-700 active:bg-primary-800 focus-visible:ring-primary-500 px-4 py-2 text-base rounded-md gap-2 "
  style="cursor: pointer;"
  type="button"
>
  Default Button
</button>
`;
